[metadata]
name = FMU4FOAM
version = attr: FMU4FOAM._version.__version__
author = Henning Scheufler
home-page = https://github.com/HenningScheufler/FMU4FOAM
description = A lightweight framework that enables the packaging of OpenFOAM as co-simulation FMUs.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license-file = LICENSE
keywords = FMI OpenFOAM
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Programming Language :: C++
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering
tests_require = 
	pytest
	pyfmi
	fmpy

[options]
include_package_data = True
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
FMU4FOAM = 
	resources/*.dll
	resources/*.dylib
	resources/*.lib
	resources/*.so
	resources/*.a

[options.entry_points]
console_scripts = 
	fmu4foam = FMU4FOAM.__main__:cli_main

# [options.extras_require]
# tests = 
# 	pytest
# 	pyfmi
# 	fmpy

# [tool:pytest]
# markers =
# 	integration: marks integration tests
